--- a/themes/splice/content/welcome.htm
+++ b/themes/splice/content/welcome.htm
@@ -1,2 +1,2 @@
 <h1>S P L I C E</h1>
-<p>This is the <a href="http://octobercms.com">October CMS</a> demo theme that explores the core features. You will find files used by this theme in the <strong>themes/demo</strong> directory of your installation.</p>
+<p>This is the Splice Official website.</p>
