--- a/themes/splice/pages/404.htm
+++ b/themes/splice/pages/404.htm
@@ -5,6 +5,6 @@ layout = "default"
 <div class="jumbotron">
     <div class="container">
         <h1>Page not found</h1>
-        <p>We're sorry, but the page you requested cannot be found.</p>
+        <p>Sorry, but the page you requested wasn't found.</p>
     </div>
 </div>
