--- a/themes/splice/pages/error.htm
+++ b/themes/splice/pages/error.htm
@@ -5,6 +5,6 @@ layout = "default"
 <div class="jumbotron">
     <div class="container">
         <h1>Error</h1>
-        <p>We're sorry, but something went wrong and the page cannot be displayed.</p>
+        <p>Something went terribly wrong! Try again later.</p>
     </div>
 </div>
