Markup cleanup, removed unneeded files, prepped for content input

--- a/themes/splice/pages/about.htm
+++ b/themes/splice/pages/about.htm
@@ -21,7 +21,7 @@ is_hidden = 0
                 <div class="col-md-4 col-md-push-1">
                     <aside class="sidebar">
                         <div class="widget">
-                            <h3 class="widget-title">Discography</h3>
+                            <h3 class="widget-title">Gigography</h3>
                             <ul class="discography-list">
                                 <li>
                                     <figure class="cover"><img src="dummy/thumbnail-1.jpg" alt="thumbnail 1"></figure>
@@ -71,5 +71,4 @@ is_hidden = 0
         </div>
     </div> <!-- .testimonial-section -->
 
-    
 </main> <!-- .main-content -->
