--- a/themes/splice/pages/home.htm
+++ b/themes/splice/pages/home.htm
@@ -13,7 +13,7 @@ layout = "default"
         <ul class="slides">
             <li class="lazy-bg" data-background="{{ 'assets/images/dummy/slide-1.jpg'|theme }}">
                 <div class="container">
-                    <h2 class="slide-title">Header goes here</h2>
+                    <h2 class="slide-title">SPLICE</h2>
                     <h3 class="slide-subtitle">Less important text goes here</h3>
                     <p class="slide-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br>Fugiat aliquid minus nemo sed est.</p>
 
@@ -22,20 +22,20 @@ layout = "default"
             </li>
             <li class="lazy-bg" data-background="{{ 'assets/images/dummy/slide-2.jpg'|theme }}">
                 <div class="container">
-                        <h2 class="slide-title">Header goes here</h2>
-                        <h3 class="slide-subtitle">Less important text goes here</h3>
-                        <p class="slide-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br>Fugiat aliquid minus nemo sed est.</p>
+					<h2 class="slide-title">Header goes here</h2>
+					<h3 class="slide-subtitle">Less important text goes here</h3>
+					<p class="slide-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br>Fugiat aliquid minus nemo sed est.</p>
 
-                        <a href="#" class="button cut-corner">Read More</a>
+					<a href="#" class="button cut-corner">Read More</a>
                 </div>
             </li>
             <li class="lazy-bg" data-background="{{ 'assets/images/dummy/slide-3.jpg'|theme }}">
                 <div class="container">
-                        <h2 class="slide-title">Header goes here</h2>
-                        <h3 class="slide-subtitle">Less important text goes here</h3>
-                        <p class="slide-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br>Fugiat aliquid minus nemo sed est.</p>
+					<h2 class="slide-title">Header goes here</h2>
+					<h3 class="slide-subtitle">Less important text goes here</h3>
+					<p class="slide-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br>Fugiat aliquid minus nemo sed est.</p>
 
-                        <a href="#" class="button cut-corner">Read More</a>
+					<a href="#" class="button cut-corner">Read More</a>
                 </div>
             </li>
         </ul>
