Updated home page with final styling, new profile images

--- a/themes/splice/pages/home.htm
+++ b/themes/splice/pages/home.htm
@@ -11,13 +11,11 @@ layout = "default"
 <div class="hero">
     <div class="slider">
         <ul class="slides">
-            <li class="lazy-bg" data-background="{{ 'assets/images/band/16.png'|theme }}">
+            <li class="lazy-bg" data-background="{{ 'assets/images/carousel/slide1.jpg'|theme }}">
                 <div class="container">
                     <h2 class="slide-title">SPLICE</h2>
                     <h3 class="slide-subtitle">The next stage in the evolution of rock music.</h3>
-                    <p class="slide-desc">Stay tuned for future updates regarding tour dates and upcoming releases. </p>
-
-                    <a href="#" class="button cut-corner">Read More</a>
+                    <a href="./about.htm" class="button cut-corner">Read More</a>
                 </div>
             </li>
             <li class="lazy-bg" data-background="{{ 'assets/images/band/53.png'|theme }}">
@@ -30,7 +28,6 @@ layout = "default"
                 <div class="container">
 					<h3 class="slide-subtitle">SPLICE</h3>
 					<p class="slide-desc">Stay tuned for future updates regarding tour dates and upcoming releases. </p>
-					<a href="#" class="button cut-corner">Read More</a>
                 </div>
             </li>
         </ul>
