--- a/themes/splice/pages/home.htm
+++ b/themes/splice/pages/home.htm
@@ -6,52 +6,53 @@ layout = "default"
 <div class="hero">
     <div class="slider">
         <ul class="slides">
-            <li class="lazy-bg" data-background="{{ 'assets/images/carousel/slide1.jpg'|theme }}">
+            <li class="" data-background="{{ 'assets/images/carousel/slide1.jpg'|theme }}">
                 <div class="container">
                     <h2 class="slide-title">SPLICE</h2>
                     <h3 class="slide-subtitle">The next stage in the evolution of rock music.</h3>
                     <a href="./about.htm" class="button cut-corner">Read More</a>
                 </div>
             </li>
-            <li class="lazy-bg" data-background="{{ 'assets/images/band/53.png'|theme }}">
+            <!-- <li class="" data-background="{{ 'assets/images/band/53.png'|theme }}">
                 <div class="container">
 					<h3 class="slide-subtitle">SPLICE</h3>
 					<p class="slide-desc">The next stage in the evolution of rock music.</p>
                 </div>
             </li>
-            <li class="lazy-bg" data-background="{{ 'assets/images/band/78.png'|theme }}">
+            <li class="" data-background="{{ 'assets/images/band/78.png'|theme }}">
                 <div class="container">
 					<h3 class="slide-subtitle">SPLICE</h3>
 					<p class="slide-desc">Stay tuned for future updates regarding tour dates and upcoming releases. </p>
                 </div>
-            </li>
+            </li> -->
         </ul>
     </div>
+
 </div>
 
 <main class="main-content">
-    <div class="fullwidth-block testimonial-section">
+    <!-- <div class="fullwidth-block testimonial-section">
         <div class="container">
             <div class="quote-slider">
                 <ul class="slides">
                     <li>
                         <blockquote>
                             <p>The latest hard rock sensation. A conceptual merger of hard rock, metal, and French/Indigenous culture. This is a band that needs to be seen to be believed.</p>
-                            <cite>Evan</cite>
+                            <cite>John</cite>
                             <span>Jun 2018</span>
                         </blockquote>
                     </li>
                     <li>
                         <blockquote>
                             <p>From on-stage antics to memorable off-stage encounters, the level of fan enthusiasm is already staggering for such a young band. </p>
-                            <cite>Evan</cite>
+                            <cite>John</cite>
                             <span>May 2018</span>
                         </blockquote>
                     </li>
                 </ul>
             </div>
         </div>
-    </div> <!-- .testimonial-section -->
+    </div> -->
 
     <div class="fullwidth-block upcoming-event-section" data-bg-color="#191919">
         <div class="container">
