Updated upcoming events carousel to 2 items and other styling issues

--- a/themes/splice/pages/home.htm
+++ b/themes/splice/pages/home.htm
@@ -31,39 +31,14 @@ layout = "default"
 </div>
 
 <main class="main-content">
-    <!-- <div class="fullwidth-block testimonial-section">
-        <div class="container">
-            <div class="quote-slider">
-                <ul class="slides">
-                    <li>
-                        <blockquote>
-                            <p>The latest hard rock sensation. A conceptual merger of hard rock, metal, and French/Indigenous culture. This is a band that needs to be seen to be believed.</p>
-                            <cite>John</cite>
-                            <span>Jun 2018</span>
-                        </blockquote>
-                    </li>
-                    <li>
-                        <blockquote>
-                            <p>From on-stage antics to memorable off-stage encounters, the level of fan enthusiasm is already staggering for such a young band. </p>
-                            <cite>John</cite>
-                            <span>May 2018</span>
-                        </blockquote>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div> -->
-
     <div class="fullwidth-block upcoming-event-section" data-bg-color="#191919">
         <div class="container">
             <header class="section-header">
                 <h2 class="section-title">Upcoming events</h2>
-
                 <div class="event-nav">
                     <a class="prev" id="event-prev" href="#"><i class="fa fa-caret-left"></i></a>
                     <a class="next" id="event-next" href="#"><i class="fa fa-caret-right"></i></a>
                 </div> 
-
             </header> 
             
             <div class="event-carousel"> 
@@ -78,7 +53,7 @@ layout = "default"
             <div class="row">
                 {% partial 'site/past-shows' %}
             </div>
-        </div> <!-- .container -->
-    </div> <!-- .why-chooseus-section -->
-</main> <!-- .main-content -->
+        </div> 
+    </div> 
+</main> 
 
