--- a/themes/splice/pages/contact.htm
+++ b/themes/splice/pages/contact.htm
@@ -1,5 +1,48 @@
-title = "Contact Us"
-url = "/contact"
-layout = "default"
-is_hidden = 0
+title = "Contact Us" 
+url = "/contact" 
+layout = "default" 
+is_hidden = 0 
 ==
+
+<main class="main-content">
+    <div class="fullwidth-block inner-content">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="content">
+                        <div class="contact-section">
+                            <div class="container">
+                                <h2 class="entry-title text-center">Contact Us</h2>
+                                <p class="leading text-center">{% content "contact/message.txt" %}</p>
+                                <div class="row">
+                                    <div class="col-md-8 col-md-offset-2">
+                                        <form class="form-horizontal">
+                                            <div class="form-group">
+                                                <label for="exampleInputName2">Name</label>
+                                                <input type="text" class="form-control" id="exampleInputName2" placeholder="">
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="exampleInputEmail2">Email</label>
+                                                <input type="email" class="form-control" id="exampleInputEmail2" placeholder="">
+                                            </div>
+                                            <div class="form-group ">
+                                                <label for="exampleInputText">Your Message</label>
+                                                <textarea class="form-control" placeholder=""></textarea>
+                                            </div>
+                                            <div class="form-group ">
+                                                <a href="#" class="button cut-corner">Send Message</a>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- .testimonial-section -->
+
+</main>
+<!-- .main-content -->
